--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@shdw-drive/sdk",
-  "version": "2.0.0",
+  "name": "@shdwdrive/sdk",
+  "version": "1.0.0",
   "description": "SDK for shdwDrive file operations",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,7 +15,7 @@
     "storage"
   ],
   "author": "",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "@project-serum/anchor": "^0.26.0",
     "@solana/web3.js": "^1.98.0",
